# paperless-gpt

./: .dockerignore  .gitignore  .goreleaser.yaml  .markdownlint.json  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTEXT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  E2E_TEST_FIXES.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  app_http_handlers.go  app_http_handlers_test.go  app_llm.go  app_llm_googleai.go  app_llm_test.go  app_llm_tongyi.go  app_llm_tongyi_test.go  background.go  background_chaining_test.go  background_test.go  build-and-run.sh  config_view.go  config_view_test.go  correspondent_fix_test.go  docker-build-and-push.sh  docker-compose.yml  embedded_assets.go  entrypoint.sh  env_registry.go  env_registry_test.go  go.mod  go.sum  http_client_bearer.go  http_client_bearer_test.go  (+35 more)
.github/: FUNDING.yml  config.yml  copilot-instructions.md  pull_request_template.md
cline_docs/: activeContext.md  productContext.md  progress.md  systemPatterns.md  techContext.md
default_prompts/: adhoc-analysis-prompt.tmpl  correspondent_prompt.tmpl  created_date_prompt.tmpl  custom_field_prompt.tmpl  document_type_prompt.tmpl  ocr_prompt.tmpl  summary_prompt.tmpl  tag_prompt.tmpl  title_prompt.tmpl
docs/: ARCHITECTURE.md  CHATANYWHERE.md  TONGYI.md  local_finetuned_document_type.md  mistral_llm.md  parser_plugin_rfc.md
ocr/: anthropic_provider_test.go  azure_provider.go  azure_provider_test.go  azure_types.go  (+19 more)
paperless-gpt-parser/: README.md  pyproject.toml
paperless-gpt-parser/src/paperless_gpt_parser/: __init__.py  client.py  config.py  parser.py
(+89 files in other folders)
