[project]
name = "paperless-gpt-parser"
version = "0.1.0a1"
description = "paperless-ngx parser plugin that forwards documents to a paperless-gpt sidecar."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "icereed", email = "icereed@users.noreply.github.com" },
]
keywords = ["paperless-ngx", "paperless-gpt", "ocr", "llm", "parser-plugin"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Information Technology",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Office/Business",
]
dependencies = [
  "httpx>=0.27",
  "Pillow>=10",
]

[project.optional-dependencies]
test = ["pytest>=8", "pytest-httpx>=0.30"]

[project.urls]
Homepage = "https://github.com/icereed/paperless-gpt"
Issues = "https://github.com/icereed/paperless-gpt/issues"
Discussion = "https://github.com/icereed/paperless-gpt/pull/964"

[project.entry-points."paperless_ngx.parsers"]
paperless_gpt = "paperless_gpt_parser.parser:GptParser"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/paperless_gpt_parser"]
